--- a/MauiAppHotel/Views/ContratacaoHospedagem.xaml
+++ b/MauiAppHotel/Views/ContratacaoHospedagem.xaml
@@ -2,32 +2,28 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.Views.ContratacaoHospedagem"
-             Title="ContratacaoHospedagem"
              NavigationPage.HasNavigationBar="False"
-             BackgroundColor="{StaticResource Gray100}">
+             BackgroundColor="#8B0000">
 
     <VerticalStackLayout VerticalOptions="CenterAndExpand"
-                         Padding="10"
-                         Spacing="10">
-
+                         Padding="20"
+                         Spacing="20">
         <Label Text="Cálculo da Diária"
-               FontFamily="Kalam"
-               FontSize="50"
-               TextColor="{StaticResource Primary}" />
+               FontSize="40"
+               HorizontalOptions="Center"
+               TextColor="White" />
+        <Frame Padding="20"
+               CornerRadius="12">
+            <VerticalStackLayout Spacing="15">
 
-        <Frame Padding="10">
-            <VerticalStackLayout>
                 <Grid RowDefinitions="Auto, Auto"
-                      ColumnDefinitions="*, *, 2*">
-
+                     ColumnDefinitions="*, Auto, Auto">
                     <Label Grid.Row="0" Grid.Column="0"
                            Text="Adultos:" />
-
                     <Label Grid.Row="0" Grid.Column="1"
-                           TextColor="{StaticResource Primary}"
-                           Text="{Binding Value}"
+                           TextColor="White"
+                           Text="{Binding Value} "
                            BindingContext="{x:Reference stp_adultos}"/>
-
                     <Stepper Grid.Row="0" Grid.Column="2"
                              x:Name="stp_adultos"
                              Minimum="0"
@@ -38,39 +34,35 @@
                            Text="Crianças:" />
 
                     <Label Grid.Row="1" Grid.Column="1"
-                           TextColor="{StaticResource Primary}"
-                           Text="{Binding Value}"
+                           TextColor="White"
+                           Text="{Binding Value} "
                            BindingContext="{x:Reference stp_criancas}"/>
-
                     <Stepper Grid.Row="1" Grid.Column="2"
                              x:Name="stp_criancas"
                              Minimum="0"
                              Maximum="10"
                              Increment="1" />
                 </Grid>
-
-                <Frame Padding="10" Margin="10">
-                    <VerticalStackLayout>
-
+                <Frame Padding="10" Margin="10" CornerRadius="12">
+                    <VerticalStackLayout Spacing="10">
                         <Label Text="Escolha sua Suíte"
                                TextTransform="Uppercase"
                                FontSize="Subtitle"
-                               TextColor="{StaticResource Primary}"/>
-
+                               TextColor="White"/>
                         <Picker x:Name="pck_quarto"
                                 Title="Selecione sua Acomodação"
                                 ItemDisplayBinding="{Binding Descricao}"/>
                     </VerticalStackLayout>
                 </Frame>
 
-                <Frame Padding="10"
-                       Margin="10">
-                    <VerticalStackLayout Spacing="10">
-
+                <Frame Padding="15"
+                       Margin="15"
+                       CornerRadius="12">
+                    <VerticalStackLayout Spacing="15">
                         <Label Text="Período da Estadia"
                                TextTransform="Uppercase"
                                FontSize="Subtitle"
-                               TextColor="{StaticResource Primary}"/>
+                              TextColor="White"/>
 
                         <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
                             <Label Text="Check-in:" />
@@ -78,7 +70,6 @@
                                         DateSelected="dtpck_checkin_DateSelected"
                                         Format="dd/MM/yyyy" />
                         </HorizontalStackLayout>
-
                         <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
                             <Label Text="Check-out:" />
                             <DatePicker x:Name="dtpck_checkout"
@@ -86,11 +77,22 @@
                         </HorizontalStackLayout>
                     </VerticalStackLayout>
                 </Frame>
-
-                <Button Text="Avançar" Clicked="Button_Clicked"   />
+                <Button BackgroundColor="DarkRed"
+                        TextColor="White"
+                        Text="Avançar"
+                        Clicked="Button_Clicked" />
 
             </VerticalStackLayout>
         </Frame>
+
+
+        <Button Text="Sobre"
+            Clicked="BtnSobre_Clicked"
+            BackgroundColor="DarkRed"
+            TextColor="White"
+            HorizontalOptions="Center"
+            WidthRequest="150" />
+
 
     </VerticalStackLayout>
 
