--- a/MauiAppHotel/Views/HospedagemContratada.xaml
+++ b/MauiAppHotel/Views/HospedagemContratada.xaml
@@ -3,64 +3,71 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.Views.HospedagemContratada"
              NavigationPage.HasNavigationBar="False"
-             BackgroundColor="{StaticResource Gray100}">
-
-    <VerticalStackLayout VerticalOptions="CenterAndExpand">
-
+             BackgroundColor="#8B0000">
+    <VerticalStackLayout VerticalOptions="CenterAndExpand"
+                         Padding="20"
+                        Spacing="20">
         <Label Text="{Binding QuartoSelecionado.Descricao}"
-               TextColor="{StaticResource Primary}"
-               FontFamily="Kalam"
-               FontSize="50"
-               HorizontalTextAlignment="Center"/>
-
-        <Frame Margin="10">
-            <StackLayout  Orientation="Horizontal" >
-                <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
-                    <Label Text="Adultos: " />
-                    <Label Text="{Binding QntAdultos}" 
-                           TextColor="{StaticResource Primary}" />
+               TextColor="White"
+               FontSize="40"
+               HorizontalOptions="Center" />
+        <Frame Padding="20"
+               CornerRadius="12">
+            <StackLayout Orientation="Horizontal" Spacing="20" HorizontalOptions="Center">
+                <HorizontalStackLayout Spacing="5">
+                    <Label Text="Adultos:" />
+                    <Label Text="{Binding QntAdultos}"
+                           TextColor="White"
+                           FontAttributes="Bold" />
                 </HorizontalStackLayout>
 
-                <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
-                    <Label Text="Crianças: " />
-                    <Label Text="{Binding QntCriancas}" 
-                           TextColor="{StaticResource Primary}" />
+                <HorizontalStackLayout Spacing="5">
+                    <Label Text="Crianças:" />
+                    <Label Text="{Binding QntCriancas}"
+                           TextColor="White"
+                           FontAttributes="Bold" />
                 </HorizontalStackLayout>
             </StackLayout>
         </Frame>
-
-        <Frame Margin="10">
+        <Frame Padding="20"
+               CornerRadius="12">
             <Grid ColumnDefinitions="*, *, *"
-                  RowDefinitions="Auto, Auto">
+                  RowDefinitions="Auto, Auto"
+                  ColumnSpacing="10">
                 <Label Grid.Row="0" Grid.Column="0" Text="Check-in:" />
                 <Label Grid.Row="0" Grid.Column="1" Text="Check-out:" />
                 <Label Grid.Row="0" Grid.Column="2" Text="Estadia:" />
-
-                <Label Grid.Row="1" Grid.Column="0" 
+                <Label Grid.Row="1" Grid.Column="0"
                        Text="{Binding DataCheckIn, StringFormat='{}{0:dd/MM/yyyy}'}"
-                       TextColor="{StaticResource Primary}" />
-
-                <Label Grid.Row="1" Grid.Column="1" 
+                       TextColor="White"
+                       FontAttributes="Bold" />
+                <Label Grid.Row="1" Grid.Column="1"
                        Text="{Binding DataCheckOut, StringFormat='{}{0:dd/MM/yyyy}'}"
-                       TextColor="{StaticResource Primary}" />
-
-                <Label Grid.Row="1" Grid.Column="2" 
+                       TextColor="White"
+                       FontAttributes="Bold" />
+                <Label Grid.Row="1" Grid.Column="2"
                        Text="{Binding Estadia}"
-                       TextColor="{StaticResource Primary}"/>
+                       TextColor="White"
+                       FontAttributes="Bold" />
             </Grid>
         </Frame>
-
-        <Frame Margin="10">
-            <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
-                <Label Text="Valor Total: " />
-                <Label Text="{Binding ValorTotal, StringFormat='{}{0:c}'} "
-                       TextColor="{StaticResource Primary}" />
+        <Frame Padding="20"
+               CornerRadius="12">
+            <HorizontalStackLayout HorizontalOptions="Center"
+                                   Spacing="5">
+                <Label Text="Valor Total:" />
+                <Label Text="{Binding ValorTotal, StringFormat='{}{0:c}'}"
+                       TextColor="White"
+                       FontAttributes="Bold" />
             </HorizontalStackLayout>
         </Frame>
-
-        <Button Text="Voltar"
+        <Button BackgroundColor="DarkRed"
+                TextColor="White"
+                Text="Voltar"
                 HorizontalOptions="Center"
+                WidthRequest="150"
                 Clicked="Button_Clicked" />
 
     </VerticalStackLayout>
+
 </ContentPage>
